# pyzantium

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: Build.yml
doc/: conf.py  index.rst
doc/api/: block.rst  chain.rst  index.rst  storage.rst  verify.rst
src/pyzantium/: __init__.py  block.py  chain.py  fork.py  node.py  verify.py
src/pyzantium/endpoint/: __init__.py  fastapi.py  flask.py
src/pyzantium/storage/: __init__.py  disk.py
test/: block_test.py
