[metadata]
name = pyzantium
version = 0.0.2
author = Reza Mahdi
author_email = rmahdi.develop@gmail.com
url = https://github.com/rezamahdi/pyzantium
description = Python implementation and building blocks for blockchain
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Topic :: Security :: Cryptography
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.7
packages = find:
package_dir =
    =src
install_requires =
    cryptography

[options.extras_require]
dev =
    pytest
    pytest-cov
fastapi =
    fastapi
leveldb =
    plyvel
doc =
    sphinx

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyz-node = pyzantium.node:main
    pyz-client = pyzantium.client:main